Add:ヘッダー(仮)

--- a/app/views/shared/_not_login_header.html.erb
+++ b/app/views/shared/_not_login_header.html.erb
@@ -1,13 +1,5 @@
-
-<div class="shadow-lg flex flex-col-reverse drop-shadow-2xl sm:flex-row">
-  <div class="w-80 bg-blue-100 p-4 text-gray-500 drop-shadow-2xl text-center flex flex-col justify-center ">
-    <%= link_to 'Twitter認証して始める', auth_at_provider_path(:provider => :twitter) %>
-    <p class="text-sm mt-2">
-      You can send fan letters to your dearest friends and share the fan letters you receive.
-    </p>
-    <button class="bg-blue-400 mx-auto hover:bg-blue-600 contrast-200 mt-4 rounded-full cursor-pointer animate-bounce
- text-white text-sm px-4 py-2 w-3/5">
-      Twitter認証
-    </button>
+<div class="font-bold py-2 px-5 bg-indigo-100 text-indigo-800 w-full">
+  <div class="mt-6 flex justify-between text-center">
+    <%= link_to 'ご縁箱', root_path %>
   </div>
 </div>
