--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,7 @@
   </head>
 
   <body>
-    <% if logged_in? %>
-      <%= render 'shared/header' %>
-    <% else %>
-      <%= render 'shared/not_login_header' %>
-    <% end %>
+  <div id='app'></div>
     <%= yield %>
-    <%= render 'shared/footer' %>
   </body>
 </html>
