--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,6 @@
 
   <body>
   <div id='app'></div>
-    <%= javascript_pack_tag 'hello_vue' %>
+    <%# <%= javascript_pack_tag 'hello_vue' %>
   </body>
 </html>
