--- a/app/views/crawlers/show.html.erb
+++ b/app/views/crawlers/show.html.erb
@@ -1,4 +1,4 @@
 <% set_meta_tags(og: { title: "#{@user.name}さんのご縁箱です",
   description: "みんなもファンレターを書いてみよう！",
-  image: 'https://goenbako.com/img/mybox.jpg' },
+  image: @share_image },
   twitter: { card: 'summary_large_image' }) %>
