Fix:画像の参照方法を修正

--- a/app/views/crawlers/show.html.erb
+++ b/app/views/crawlers/show.html.erb
@@ -1,4 +1,4 @@
 <% set_meta_tags(og: { title: "#{@user.name}さんに届いたファンレターです。（全文はリンクから!）",
   description: "ご縁箱を開設してファンレターを受け取ってみよう！",
-  image: @share_image },
+  image: @share_image.image_url.url },
   twitter: { card: 'summary_large_image' }) %>
