Add:メールの文言修正

--- a/app/views/user_mailer/new_letter.html.erb
+++ b/app/views/user_mailer/new_letter.html.erb
@@ -15,7 +15,7 @@
   <p>https://goenbako.com/<%= @sender.twitter_id %></p>
 
   <p>˖✧˖✧✧˖˖✧✧˖˖✧✧˖˖✧✧˖˖✧✧˖✧˖˖✧˖✧✧˖</p>
-  <p>通知をオフにする場合はマイページの設定画面から変更することが出来ます。</p>
+  <p>通知を変更する場合は"Menu"→"設定"から設定することが出来ます。</p>
 
   <p>※本メールに身に覚えのない方はお手数ですが返信にてお知らせ下さい。</p>
 
