--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= favicon_link_tag('/img/favicon.ico') %>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.jpg" sizes="180x180">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
