Add:ホーム画面に追加アイコン6

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -4,11 +4,13 @@
   "short_name": "°˖✧ご縁箱✧˖°",
   "start_url": "/",
   "icons": [
-      {
-        "src": "apple-touch-icon.png",
-        "sizes": "180x180",
-        "type": "image/png"
-      },
+  <% icon_sizes.map { |s| "#{s}x#{s}" }.each.with_index do |dim, i| %>
+    {
+      "src": "<%= image_path "serviceworker-rails/heart-#{dim}.png" %>",
+      "sizes": "<%= dim %>",
+      "type": "image/png"
+    }<%= i == (icon_sizes.length - 1) ? '' : ',' %>
+  <% end %>
   ],
   "theme_color": "#000000",
   "background_color": "#FFFFFF",
