--- a/app/views/letter_shares/show.html.erb
+++ b/app/views/letter_shares/show.html.erb
@@ -1,4 +1,4 @@
 <% set_meta_tags(og: { title: "#{@user.name}さんに届いたファンレターです。（全文はリンクから!）",
   description: "ご縁箱を開設してファンレターを受け取ってみよう！",
-  image: @share_image.image_url.url },
+  image: @share_image.image.url },
   twitter: { card: 'summary_large_image' }) %>
